--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.18.0",
     "react": "16.5.0",
     "react-native": "0.57.0",
+    "react-native-vector-icons": "^5.0.0",
     "react-navigation": "^2.13.0",
     "react-redux": "^5.0.7",
     "redux": "^4.0.0",
